--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script async src="http://tlk.io/embed.js" type="text/javascript"></script>
+  <script async src="https://tlk.io/embed.js" type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
