--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>FrueiApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script async src="https://tlk.io/embed.js" type="text/javascript"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script async src="http://tlk.io/embed.js" type="text/javascript"></script>  
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+<!-- <script type="text/javascript">
+  $(document).ready(function(){
+          var k = $("tlkio")[0];
+          alert(k);
+      });
+</script> -->
+
 </html>
